<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryText"
            android:text="@string/introduction" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:text="@string/q1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/secondaryText"
            android:text="@string/q1d" />

        <RadioGroup
            android:id="@+id/rbg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q1a1"
                android:textColor="@color/primaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a1" />
            <RadioButton
                android:id="@+id/q1a2"
                android:textColor="@color/primaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a2" />
            <RadioButton
                android:id="@+id/q1a3"
                android:textColor="@color/primaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a3" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:text="@string/q2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/secondaryText"
            android:text="@string/q2d" />

        <RadioGroup
            android:id="@+id/rbg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q2a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a1" />
            <RadioButton
                android:id="@+id/q2a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a2" />
            <RadioButton
                android:id="@+id/q2a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a3" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:text="@string/q3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/secondaryText"
            android:text="@string/q3d" />

        <CheckBox
            android:id="@+id/q3a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a1" />

        <CheckBox
            android:id="@+id/q3a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a2" />

        <CheckBox
            android:id="@+id/q3a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3a3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:text="@string/q4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/secondaryText"
            android:text="@string/q4d" />

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"/>

        <EditText
            android:id="@+id/q4a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:text="@string/q5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/secondaryText"
            android:text="@string/q5d" />

        <RadioGroup
            android:id="@+id/rbg5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q5a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a1" />
            <RadioButton
                android:id="@+id/q5a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a2" />
            <RadioButton
                android:id="@+id/q5a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a3" />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submit"/>

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="reset"/>


    </LinearLayout>
</ScrollView>